test/2/type/label-mismatch.err
test/2/type/label-mismatch.ploy:3:14-23: type error: call argument field is labeled `k`; domain field is labeled `j`. argument type: (i:Int k:Int)
| main = exit.f(i=0 k=1)
               ~~~~~~~~~
test/2/type/label-mismatch.ploy:3:13-14: note: domain type: (i:Int j:Int)
| main = exit.f(i=0 k=1)
              ~
